# ultra-rss-reader

./: .env  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DESIGN_REVIEW.md  README.md  TODO.md  TODO.txt  biome.json  components.json  index.html  llms.txt  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  release.yml
.storybook/: main.ts  preview.ts
docs/: README.md  feed-content-privacy.md  incident-runbook.md  release-manual-verification.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V11__account_sync_on_startup.sql  V12__mute_keywords.sql  V13__tag_color_palette_refresh.sql  V14__article_content_text.sql  V15__remove_inoreader.sql  V16__account_connection_verification.sql  V1__initial.sql  V2__preferences.sql  V3__fts5.sql  V4__tags.sql  V5__feed_display_mode.sql  V6__sync_state_timestamp_usec.sql  V7__feed_display_mode_inherit.sql  V8__feed_reader_preview_modes.sql  V9__reader_preview_default_preferences.sql
src-tauri/src/: browser_webview.rs  lib.rs  main.rs  menu.rs  menu_i18n.rs
src-tauri/src/commands/: account_commands.rs  article_commands.rs  browser_webview_commands.rs  database_commands.rs  dto.rs  feed_commands.rs  log_commands.rs  mod.rs  mute_keyword_commands.rs  opml_commands.rs  platform_commands.rs  preference_commands.rs  share_commands.rs  sync_commands.rs  sync_providers.rs  tag_commands.rs  updater_commands.rs
src-tauri/src/domain/: account.rs  article.rs  error.rs  feed.rs  folder.rs  mod.rs  mute_keyword.rs  provider.rs  tag.rs  types.rs
src-tauri/src/infra/: feed_discovery.rs  keyring_store.rs  mod.rs  opml.rs  sanitizer.rs
src-tauri/src/infra/db/: backup.rs  connection.rs  migration.rs  mod.rs  sqlite_account.rs  sqlite_article.rs  sqlite_feed.rs  sqlite_folder.rs  sqlite_mute_keyword.rs  sqlite_pending_mutation.rs  sqlite_preference.rs  sqlite_sync_state.rs  sqlite_tag.rs
src-tauri/src/infra/provider/: freshrss.rs  greader.rs  local.rs  mod.rs  normalizer.rs  traits.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/repository/: account.rs  article.rs  feed.rs  folder.rs  mod.rs  mute_keyword.rs  pending_mutation.rs  preference.rs  sync_state.rs  tag.rs
src-tauri/src/service/: event_bus.rs  housekeeping.rs  mod.rs  sync_flow.rs  sync_scheduler.rs  sync_service.rs
src-tauri/tests/: integration_test.rs
(+953 files in other folders)
