[package]
name = "ultra-rss-reader"
version = "0.11.0"
edition = "2021"
description = "A Tauri-based RSS reader"

[lib]
name = "ultra_rss_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ultra-rss-reader"
path = "src/main.rs"
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "unstable"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
feed-rs = "2"
ammonia = "4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "sync-secret-service"] }
async-trait = "0.1"
thiserror = "2"
quick-xml = "0.36"
kuchikiki = "0.8.8-speedreader"
open = "5"
futures = "0.3.32"
sys-locale = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-web-kit = "0.3.2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows = { version = "0.61.2", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
